--- a/interiors.html
+++ b/interiors.html
@@ -53,7 +53,7 @@
             height="650"
           />
         </a>
-        <a href="#" title="Bedroom rooms">
+        <a href="#" title="Bedrooms">
           <img
             class="img-cat"
             src="/images/bedroom.jpg"
@@ -62,7 +62,7 @@
             height="650"
           />
         </a>
-        <a href="#" title="Bathroom rooms">
+        <a href="#" title="Bathrooms">
           <img
             class="img-cat"
             src="/images/bathroom.jpg"
@@ -71,7 +71,7 @@
             height="650"
           />
         </a>
-        <a href="#" title="Kitchen rooms">
+        <a href="#" title="Kitchen">
           <img
             class="img-cat"
             src="/images/kitchen.jpg"
