--- a/ourstory.html
+++ b/ourstory.html
@@ -42,7 +42,6 @@
       </nav>
     </header>
     <main>
-      <p></p>
       <div class="group-text">
         <div class="open-group">
           <img
@@ -62,9 +61,13 @@
             height="900"
           />
         </div>
-        <p class="quote">
-          "Every great design begins with an even better story". - Lorinda Mamo
-        </p>
+        <img
+          class="quote"
+          src="/images/great design.jpg"
+          alt="quote on design"
+          width="1920"
+          height="900"
+        />
       </div>
       <div class="story-container">
         <p>
