--- a/products.html
+++ b/products.html
@@ -41,7 +41,151 @@
         <a class="nav-item" href="#">contact</a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div>
+        <img
+          class="banner"
+          src="/images/luxury-redefined.jpg"
+          alt="luxury interior"
+          width="1920"
+          height="400"
+        />
+      </div>
+      <div>
+        <div class="sideboard-group">
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/diamond-sideboard.jpg"
+              alt="turquoise sideboard"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>DIAMOND</h3>
+              <p>SIDEBOARD</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/angra-sideboard.jpg"
+              alt="black wood sideboard"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>ANGRA</h3>
+              <p>SIDEBOARD</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/lapiaz-sideboard.jpg"
+              alt="grey with gold sideboard"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>LAPIAZ</h3>
+              <p>SIDEBOARD</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+        </div>
+        <div class="table-group">
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/heritage-table.jpg"
+              alt="mixed material table"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>HERITAGE</h3>
+              <p>TABLE</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/bonsai-table.jpg"
+              alt="marble table"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>BONSAI</h3>
+              <p>TABLE</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/fortuna-table.jpg"
+              alt="gold table"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>FORTUNA</h3>
+              <p>TABLE</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+        </div>
+        <div class="armchair-group">
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/versailles-armchair.jpg"
+              alt="art armchair"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>VERSAILLES</h3>
+              <p>ARMCHAIR</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/odette-sofa.jpg"
+              alt="white sofa"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>ODETTE</h3>
+              <p>SOFA</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+          <div class="prod-area">
+            <img
+              class="products"
+              src="/images/imperfectio-armchair.jpg"
+              alt="green and gold armchair"
+              width="1000"
+              height="875"
+            />
+            <div class="prod-text">
+              <h3>IMPERFECTIO</h3>
+              <p>ARMCHAIR</p>
+            </div>
+            <button class="price">GET PRICE</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <aside>
       <p class="featured-title">Featured in</p>
       <div class="feature-group">
