modificari in urma feedback-ului

--- a/classes.html
+++ b/classes.html
@@ -17,13 +17,17 @@
         </ul>
       </div>
     <h1>Heroes of Sanctuary</h1>
-    <h2 style="text-align: center; color: white; padding: 5rem;">Five classes have been announced. The Barbarian, Sorceress, and Druid classes were announced at BlizzCon 2019, while a fourth, the Rogue class, was announced at BlizzCon 2021. The fifth class, the Necromancer, was announced in 2022.</h2>
+    <h2 style="text-align: center; color: white; padding: 5rem;">
+      Five classes have been announced. The Barbarian, Sorceress, and Druid classes were announced 
+      at BlizzCon 2019, while a fourth, the Rogue class, was announced at BlizzCon 2021. The fifth 
+      class, the Necromancer, was announced in 2022.
+    </h2>
     <div class="classdes">
-      <div style="color:#ff005e">The Barbarian, which appears in Diablo II and Diablo III, has the ability to switch between weapons while in combat.</div>
-      <div style="color:#ff005e">The Druid, returning from Diablo II, can shapeshift between human, werewolf, and werebear forms, and possesses earthen and storm magics.</div>
-      <div style="color:#ff005e">Necromancer returning from Diablo II and Diablo III, utilizes dark magic for summoning and attacks.</div>
-      <div style="color:#ff005e">The Rogue, returning from the first game, is a quick-moving combatant that alternates between bladed melee or ranged combat with a bow.</div>
-      <div style="color:#ff005e">The Sorceress, returning from the first game and Diablo II, is an elemental mage-type character wielding fire, cold, and lightning magics.</div>
+      <div>The Barbarian, which appears in Diablo II and Diablo III, has the ability to switch between weapons while in combat.</div>
+      <div>The Druid, returning from Diablo II, can shapeshift between human, werewolf, and werebear forms, and possesses earthen and storm magics.</div>
+      <div>Necromancer returning from Diablo II and Diablo III, utilizes dark magic for summoning and attacks.</div>
+      <div>The Rogue, returning from the first game, is a quick-moving combatant that alternates between bladed melee or ranged combat with a bow.</div>
+      <div>The Sorceress, returning from the first game and Diablo II, is an elemental mage-type character wielding fire, cold, and lightning magics.</div>
     </div>
   
     <div class="classes">
