--- a/story.html
+++ b/story.html
@@ -17,13 +17,15 @@
         </ul>
       </div>
 
-      <div class="title">
-        MEET YOUR MAKER
-      </div>
-      <div class="subtitle">
-        Lilith has returned to Sanctuary, summoned by a dark ritual after eons in exile. Her return ushers in an age of
-        darkness and misery.
-      </div>
+      <section>
+        <h1 class="title">
+          MEET YOUR MAKER
+        </h1>
+        <article class="subtitle">
+          Lilith has returned to Sanctuary, summoned by a dark ritual after eons in exile. Her return ushers in an age of
+          darkness and misery.
+        </article>
+      </section>
 
       <div class="story">
         <div class="creation">
