--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
           height="400"
         />
       </div>
-      <div>
+      <div class="content">
         <div class="sideboard-group">
           <div class="prod-area">
             <img
