--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="content-item">
                 <a href="reykjavik.html" alt="ce iti recomandam">
-                    <img src="../poze_index/blue_lagoon.jpg"/>
+                    <img src="../poze_index/blue_lagoon.webp"/>
                 </a>
                 <p>Ce iti recomandam</p>
             </div>
