--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="content-item">
                 <a href="descopera.html" alt="de ce ne place noua Islanda">
-                    <img src="../poze_index/islanda_imagine11.jpg"/>
+                    <img src="../poze_index/iceland_colors.webp"/>
                 </a>
                 <p>De ce ne place noua Islanda</p>
             </div>
