--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <article class="containers">
             <div class="content-item">
                 <a href="reykjavik.html" alt="5 zile in Reykjavik">
-                    <img src="../poze_index/reykjavik.jpg"/>
+                    <img src="../poze_index/reykjavik.webp"/>
                 </a>
                 <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
             </div>
