--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             </div>
             <div class="content-item">
                 <a href="descopera.html" alt="prin ochii nostri">
-                    <img src="../poze_index/prin_ochii_nostri.jpg"/>
+                    <img src="../poze_index/islanda_house.webp"/>
                 </a>
                 <p>Prin ochii nostri</p>
             </div>
             <div class="content-item">
                 <a href="reykjavik.html" alt="impresii de calatorie">
-                    <img src="../poze_index/circle.jpg"/>
+                    <img src="../poze_index/circle.webp"/>
                 </a>
                 <p>Impresii de calatorie</p>
             </div>
